# DRF-Project

./: .env_example  data.json  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  serializers.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner.py  0004_lesson_owner.py
users/: admin.py  filters.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_managers.py
